--- a/src/app/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/confirm-dialog/confirm-dialog.component.html
@@ -8,8 +8,8 @@
        <p>{{message || 'Are you sure?'}}</p>
      </div>
      <div class="modal-footer">
-       <button type="button" class="btn btn-primary" (click)="confirm()">OK</button>
-       <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
+       <button type="button" class="btn btn-primary mr-2" (click)="confirm()">OK</button>
+       <button type="button" class="btn btn-light" (click)="cancel()">Cancel</button>
      </div>
    </div>
   </div>
