--- a/src/app/song-edit/song-edit.component.html
+++ b/src/app/song-edit/song-edit.component.html
@@ -3,9 +3,9 @@
   <ng-template #edit>
     <div class="d-flex flex-column h-100">
       <div class="pb-2">
-        <button class="btn btn-default" (click)="navigateBack()">&#8249;&#8249; Back</button>
-        <button class="btn btn-default" (click)="saveChanges()" *ngIf="!addNew" [disabled]="!isModified()">Save Changes</button>
-        <button class="btn btn-default" (click)="addNewSong()"  *ngIf="addNew"  [disabled]="!isModified()">Add Song</button>
+        <button class="btn btn-light mr-2" (click)="navigateBack()">&#8249;&#8249; Back</button>
+        <button class="btn btn-light mr-2" (click)="saveChanges()" *ngIf="!addNew" [disabled]="!isModified()">Save Changes</button>
+        <button class="btn btn-light mr-2" (click)="addNewSong()"  *ngIf="addNew"  [disabled]="!isModified()">Add Song</button>
       </div>
       <div *ngIf="!song.removed; else showError">
         <form class="d-flex flex-wrap">
