--- a/src/app/worship/worship.component.html
+++ b/src/app/worship/worship.component.html
@@ -2,10 +2,10 @@
   <div class="center-holder d-flex flex-column">
     <div>
       <h4>Create or Open a worship session to start...</h4>
-      <button type="button" class="btn btn-primary my-2" (click)="create()">Create</button>
-      <button type="button" class="btn btn-primary my-2" (click)="routeToEdit()" [hidden]="numRowsSelected()!=1">Open</button>
-      <button type="button" class="btn btn-primary my-2" [hidden]="numRowsSelected()!=1">Clone</button>
-      <button type="button" class="btn btn-danger  my-2" (click)="removeData()" [hidden]="numRowsSelected()==0">Remove</button>
+      <button type="button" class="btn my-2 mr-2 btn-light" (click)="create()">Create</button>
+      <button type="button" class="btn my-2 mr-2 btn-light" (click)="routeToEdit()" [hidden]="numRowsSelected()!=1">Open</button>
+      <button type="button" class="btn my-2 mr-2 btn-light" [hidden]="numRowsSelected()!=1">Clone</button>
+      <button type="button" class="btn my-2 mr-2 btn-danger" (click)="removeData()" [hidden]="numRowsSelected()==0">Remove</button>
     </div>
     <div class="d-flex debug-border p-2 my-2 flex-1">
       <div class="worship-select debug-border mx-2" (mousewheel)="onMouseWheel($event)">
