Fix extra erroneous character in template

--- a/src/app/worship-viewer/worship-viewer.component.html
+++ b/src/app/worship-viewer/worship-viewer.component.html
@@ -10,7 +10,7 @@
       <div class="region1 flex-1 m-auto d-flex flex-column align-items-center justify-content-end" [ngClass]="classesR1">
         <p [ngStyle]="pStyle" *ngFor="let line of para.getRegion1Lines()">{{ line }}</p>
       </div>
-      <div class="region2 flex-1 m-auto d-flex flex-column align-items-center justify-content-start" [ngClass]="classesR2">`
+      <div class="region2 flex-1 m-auto d-flex flex-column align-items-center justify-content-start" [ngClass]="classesR2">
         <p [ngStyle]="pStyle" *ngFor="let line of para.getRegion2Lines()">{{ line }}</p>
       </div>
     </div>
